--- a/docs/card_generator.css
+++ b/docs/card_generator.css
@@ -485,27 +485,29 @@ textarea {
 }
 
 .calque_parchemin {
-    background-image:url("img/bp/parchemin_arme_0.png");
+    background-image: url("img/bp/parchemin.png");
     background-repeat: no-repeat;
     background-position: bottom;
-    bottom: 0px;
+    width:488px;
+    height: 750px;
+    top: 0px;
 }
 
 .calque_parchemin_bleeding_0 {
     width: 488px;
-    height: 225px;
+    height: 750px;
 }
 
 .calque_parchemin_bleeding_1, .calque_parchemin_bleeding_2 {
     width: 598px;
-    height: 290px;
+    height: 822px;
     margin-top: -65px;
     margin-left: -55px;
 }
 
 .calque_parchemin_bleeding_3 {
     width: 568px;
-    height: 305px;
+    height: 910px;
     margin-top: -80px;
     margin-left:-40px;
 }
@@ -534,11 +536,12 @@ textarea {
 }
 
 .calque_description {
-    background-image: url("img/bp/parchemin.png");
+    
     background-repeat: no-repeat;
-    background-position: top;
+    background-position: bottom;
     width:488px;
     height: 750px;
+    top: 640px;
 }
 
 #output_griffe{
@@ -587,7 +590,7 @@ textarea {
     color:#483627;
     line-height: 0.8em;
     text-align: center;
-    letter-spacing: -2px;
+    letter-spacing: -3px;
 }
 
 #output_card_sub_name {
@@ -595,36 +598,45 @@ textarea {
     font-size: 18pt;
     color:#000000;
     line-height: 1em;
-    padding-top: 5px;
+    padding-top: 0px;
     text-align: center;
 }
 
 #output_card_sub_name_container {
     width:488px;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
+    top: 200px;
+    height: 0px;
+}
+
+#output_description {
+    font-family: Arek Italic;
+    font-size: 21pt;
+    color:#000000;
+    text-align: center;
+    letter-spacing: -0.5px;
+    line-height: 120%;
 }
 
 #output_description_container {
-    font-family: Arek Semibold Italic;
-    font-size: 28px;
-    color:#000000;
-    width:488px;
-    border: 1px solid black;
-    text-align: center;
+    width: 488px;
+    /*border: 1px solid black;*/
+    vertical-align: top;
+    height: 50px;
 }
 
 /*#output_description_container  tr{
     vertical-align: middle;
 }*/
 
-#output_description_container  tr td{
+/*#output_description_container  tr td{
     font-family: Arek Semibold Italic;
     font-size: 21pt;
     color:#000000;
     text-align:center;
     padding-left: 30px;
     padding-right: 30px;
-}
+}*/
 
 .img_de {
     margin-top: -7px;
@@ -653,6 +665,11 @@ textarea {
 @font-face {
     font-family: Arek Semibold Italic;
     src: url("fonts/bp/Arek Semibold Italic.otf") format("opentype");
+}
+
+@font-face {
+    font-family: Arek Italic;
+    src: url("fonts/bp/Arek Italic.otf") format("opentype");
 }
 
 @font-face {
